--- a/PK29S-CPR/pom.xml
+++ b/PK29S-CPR/pom.xml
@@ -19,6 +19,14 @@
             <artifactId>postgresql</artifactId>
             <version>42.2.23</version>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>6.17.0</version>
+        </dependency>
+        
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
